# snip727-v2

./: .env.example  .gitignore  Dockerfile  README.md  README.ru.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_tables.py  515bd14ae3b8_initial_migration.py  a1b2c3d4e5f6_add_uniswap_monitoring_tables.py
src/: __init__.py
src/bot/: __init__.py  handlers.py  keyboards.py  main.py
src/core/: __init__.py  config.py
src/db/: __init__.py  models.py  session.py
src/schemas/: __init__.py  models.py
src/services/: __init__.py  monitoring.py  sentiment.py  strategy.py  trading.py
src/snip727/: __init__.py  main.py
src/snip727/bot/: main.py
src/snip727/core/: config.py
src/snip727/db/: __init__.py  models.py
src/snip727/services/: __init__.py  sentiment.py  strategy.py
src/snip727/web3/: __init__.py  client.py  monitor.py
src/utils/: logger.py
src/web3/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_bot.py  test_config.py  test_imports.py  test_integration.py  test_sentiment.py  test_strategy.py  test_uniswap_monitoring.py
tests/integration/: test_db.py
tests/unit/: test_bot.py  test_config.py  test_logger.py  test_models.py  test_schemas.py  test_services.py  test_web3.py
