[tool.poetry]
name = "snip727-v2"
version = "0.1.0"
description = "DeFi sniping bot for Uniswap V2/V3 on Base chain"
authors = ["DeFi Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.11.3"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"
aioredis = "^2.0.1"
aiogram = "^3.2.0"
httpx = "^0.25.2"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"
eth-keys = "^0.5.1"
eth-typing = "^3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
types-redis = "^4.6.0.11"
aiosqlite = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "UP", "B", "A"]
extend-ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
exclude = ["migrations"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=src --cov-report=term-by-term-report=xml --cov-report=html --cov-fail-under=85"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
